<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">文件管理器</string>
    <string name="search_hint">请输入要搜索的内容&#8230;</string>
    <string name="file">文件</string>
    <string name="folder">文件夹</string>
    <string name="cloud_connection">网盘</string>
    <string name="setting">设置</string>
    <string name="icon">图标</string>
    <string name="apps">应用管理</string>
    <string name="ftp">FTP 服务器</string>
    <string name="paste">粘贴</string>
    <string name="search">搜索</string>
    <string name="home">首页目录</string>
    <string name="sort">排序</string>
    <string name="sortBy">排序方式</string>
    <string name="directorySort">目录排序方式</string>
    <string name="history">历史记录</string>
    <string name="hiddenFiles">已隐藏文件</string>
    <string name="setAsHome">设为首页目录</string>
    <string name="extract">提取</string>
    <string name="exit">退出应用</string>
    <string name="grant">授予</string>
    <string name="prompt">提示</string>
    <string name="grant_per">授予权限</string>
    <string name="grant_text">该应用需要用户授予“读写存储空间”的权限，拒绝将无法使用此应用。</string>
    <string name="cancel">取消</string>
    <string name="returned_from_app_settings_to_activity">读写存储空间权限: %1$s</string>
    <string name="internalStorage">内部存储</string>
    <string name="file_analyzer">文件分析器</string>
    <string name="find_clean_file">发现可清理文件</string>
    <string name="analyzer">分析</string>
    <string name="sdcard">SD卡</string>
    <string name="sdcard_not_available">SD卡不可用</string>
    <string name="internal_storage_not_available">内部存储卡不可用</string>
    <string name="no_sdcard">无SD卡</string>
    <string name="new_file">新文件</string>
    <string name="recent_file">最近</string>
</resources>
