<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/menu_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history_white_24dp"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/menu_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
</menu>