<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <include layout="@layout/layout_appbar" />

        <include layout="@layout/layout_search" />

        <LinearLayout
            android:id="@+id/indicator_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/tab_indicator1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:minWidth="50dp" />

            <ImageView
                android:id="@+id/tab_indicator2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:minWidth="50dp" />
        </LinearLayout>

        <View
            android:id="@+id/fab_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fab_shadow_light"
            android:clickable="true"
            android:visibility="gone" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="6dp"
            android:elevation="6dp"
            app:layout_behavior="com.lp.filemanager.ui.SnackBarBehavior"
            fab:menu_animationDelayPerItem="50"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_buttonSpacing="5dp"
            fab:menu_colorNormal="#DA4336"
            fab:menu_colorPressed="#E75043"
            fab:menu_colorRipple="#99FFFFFF"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_labels_colorNormal="#333333"
            fab:menu_labels_colorPressed="#444444"
            fab:menu_labels_colorRipple="#66FFFFFF"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_margin="10dp"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_paddingBottom="4dp"
            fab:menu_labels_paddingLeft="8dp"
            fab:menu_labels_paddingRight="8dp"
            fab:menu_labels_paddingTop="4dp"
            fab:menu_labels_position="left"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="true"
            fab:menu_labels_style="@style/menu_labels_style_light"
            fab:menu_labels_textSize="14sp"
            fab:menu_openDirection="up"
            fab:menu_shadowColor="#66000000"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="3dp"
            fab:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_new_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/folder_fab"
                fab:fab_label="@string/folder"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_new_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_insert_drive_file_white_48dp"
                fab:fab_label="@string/file"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_new_cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cloud_white_24dp"
                fab:fab_label="@string/cloud_connection"
                fab:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>
    </android.support.design.widget.CoordinatorLayout>

    <com.lp.filemanager.ui.views.ScrimInsetsRelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <ListView
            android:id="@+id/menu_drawer"
            style="@android:style/Theme.Holo.Light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/divider1"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:background="#ffffff"
            android:choiceMode="singleChoice"
            android:dividerHeight="0dip"
            android:scrollbars="none" />

        <ImageView
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:layout_above="@+id/ftpbutton"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:paddingBottom="8dp"
            android:paddingTop="0dp"
            android:src="@color/divider" />

        <RelativeLayout
            android:id="@+id/ftpbutton"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/appbutton"
            android:background="@drawable/safr_ripple_white"
            android:clickable="true"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/ftpicon"
                android:layout_width="24dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:contentDescription="@string/icon"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:src="@drawable/ic_ftp_light" />

            <TextView
                android:id="@+id/ftptext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/ftpicon"
                android:layout_toRightOf="@+id/ftpicon"
                android:clickable="false"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/ftp"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/appbutton"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/settingsbutton"
            android:background="@drawable/safr_ripple_white"
            android:clickable="true"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/appicon"
                android:layout_width="24dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:contentDescription="@string/icon"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:src="@drawable/ic_doc_apk" />

            <TextView
                android:id="@+id/apptext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/appicon"
                android:layout_toRightOf="@+id/appicon"
                android:clickable="false"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/apps"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settingsbutton"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/safr_ripple_white"
            android:clickable="true"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <ImageView
                android:id="@+id/settingicon"
                android:layout_width="24dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:contentDescription="@string/icon"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:src="@drawable/ic_settings_grey600_48dp" />

            <TextView
                android:id="@+id/settingtext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/settingicon"
                android:layout_toRightOf="@+id/settingicon"
                android:clickable="false"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/setting"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>
    </com.lp.filemanager.ui.views.ScrimInsetsRelativeLayout>
</android.support.v4.widget.DrawerLayout>
